src/main/java/com/example/backstudy24/Error/requestError/ExpiredRefreshTokenException.java
package com.example.backstudy24.Error.requestError;
import com.example.backstudy24.Error.ErrorCode;

public class ExpiredRefreshTokenException extends BusinessException {

    public ExpiredRefreshTokenException(String message, ErrorCode code) {
        super(message, code);
    }
}